// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserBlockProfile /> renders correctly 1`] = `
<Fragment>
  <UserBlockProfile__ProfileInfo>
    <DefaultAvatar
      className="img-circle avatar"
      size={60}
    />
    <div>
      Booba
    </div>
  </UserBlockProfile__ProfileInfo>
  <IconLinkBar
    color="#333333"
    message="navbar.profile"
    url="/user/booba/edit"
  >
    <ProfileNeutralIcon
      color="#333333"
      size={16}
    />
  </IconLinkBar>
  <IconLinkBar
    color="#dc3545"
    message="global-disconnect"
    url="http://localhost/logout"
  >
    <PowerButtonIcon
      color="#dc3545"
      size={16}
    />
  </IconLinkBar>
</Fragment>
`;

exports[`<UserBlockProfile /> renders correctly with isAdmin false 1`] = `
<Fragment>
  <UserBlockProfile__ProfileInfo>
    <DefaultAvatar
      className="img-circle avatar"
      size={60}
    />
    <div>
      Booba
    </div>
  </UserBlockProfile__ProfileInfo>
  <IconLinkBar
    color="#dc3545"
    message="global-disconnect"
    url="http://localhost/logout"
  >
    <PowerButtonIcon
      color="#dc3545"
      size={16}
    />
  </IconLinkBar>
</Fragment>
`;
